fix: homepage add: custom css for dark default ligth & dark mode.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -75,3 +75,16 @@
   content: "patch";
   background-color: var(--openapi-code-orange);
 }
+
+.navbar, .navbar-sidebar {
+  background-color: rgb(96, 89, 237);
+}
+
+[data-theme="light"] .navbar, .navbar__title, .navbar_inner, .menu__link, .navbar__item, .navbar__link  {
+  color: white;
+}
+
+[data-theme="light"] .navbar__item:hover, .navbar__link:hover  {
+  color: rgb(208, 212, 224);
+}
+
