--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -6,8 +6,11 @@
 .heroBanner {
   padding: 4rem 0;
   text-align: center;
+  height: 100vh;
   position: relative;
   overflow: hidden;
+  background: rgb(2,0,36);
+  background: linear-gradient(153deg, rgba(2,0,36,1) 0%, rgba(70,70,191,1) 37%, rgba(0,212,255,1) 100%);
 }
 
 @media screen and (max-width: 996px) {
